# layercache

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  ORCHESTRATION.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  layercache.schema.json  layercache.yaml  prometheus.yml  pyproject.toml  requirements.txt  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
.opencode/: devils-advocate-agent.md  fixer-agent.md  opencode.json  review-agent.md  workflow-state.json
.opencode/skills/: orchestration.md
docs/: API.md  ARCHITECTURE.md  DASHBOARD_PLAN.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PRD.md  ROADMAP.md  TDD.md  USER_GUIDE.md  load-test-report.md  migration-sqlite-to-redis.md  p3-complete.md  p4-complete.md  progress.md  redis-setup.md  review-process.md  v1.5.0-documentation-status.md
layercache/: __init__.py  canonicalizer.py  config.py  main.py  models.py  pipeline.py  schema.py  stratifier.py  truncation.py  workflow.py
tests/: load_test.py  test_adapters.py  test_aggregator.py  test_analytics_api.py  test_anthropic_messages.py  test_canonicalizer.py  test_config.py  test_enhancements.py  test_metrics.py  test_phase1_1.py  test_phase1_2.py  test_phase1_3.py  test_phase1_4.py  test_phase2_1.py  test_phase2_1b.py  test_redis_cache.py  test_registry.py  test_semantic_cache.py  test_stratifier.py  test_truncation.py
(+77 files in other folders)
