[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layercache"
version = "1.2.0"
description = "Intelligent Prompt Enhancement & Token Caching Proxy"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "litellm>=1.0.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0.1",
    "fastembed>=0.3.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.26.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "vcrpy>=5.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
